--- a/embed/schematics/project/templates/web/static/js/api.js.tmpl
+++ b/embed/schematics/project/templates/web/static/js/api.js.tmpl
@@ -40,7 +40,9 @@ export async function apiFetch(url, options = {}) {
         });
 
         if (!response.ok) {
-            throw new Error(`HTTP error! status: ${response.status}`);
+            const errorText = await response.text();
+            const errorJSON = JSON.parse(errorText);
+            throw new Error(errorJSON.error);
         }
 
         return await response.json();
